[package]
name = "bevy_learning"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = "0.1.0"
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.25.0"
bevy_asset = "0.14.0"
bevy_egui = "0.28.0"
bevy_reflect = "0.14.0"
bevy_render = "0.14.0"
bevy_window = "0.14.0"
egui = "0.28.1"
egui_dock = "0.13.0"
once_cell = "1.19.0"
transform-gizmo-egui = "0.2.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
xml = "0.8.20"
